# ebook_secondbrain_pipeline

./: .gitignore  README.md  inspect.py  pyproject.toml  rename_project.sh
docs/: architecture.md
ebook_secondbrain_pipeline/: epub_parser.py  json_to_notion_page.py  kindle_cleaner.py
ibooks_notion_pipeline/: epub_parser.py  json_to_notion_page.py
scripts/: doctor.py  export_to_notion.py  inspect_ibooks.py  inspect_library.py  inspect_single_book.py  list_ibooks_as_json.py  test_notion_connection.py
